# PyCLA

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: basic.yml  book.yml  ci.yml  workflow.yml
book/: _config.yml
book/docs/: index.md
book/sphinx/: conf.py
cvx/pycla/: __init__.py  constants.py  helpers.py  plotting.py  pycla.py  simplex.py  validation.py
pycla/: __init__.py  constants.py  helpers.py  plotting.py  pycla.py  simplex.py  validation.py
test/: conftest.py  test_CLA.py  test_SemiPyCLA.py  test_plotting.py
test/data_test/: CLA_test_random_50.csv  CLA_test_sharpe.csv
tests/: conftest.py  test_CLA.py  test_SemiPyCLA.py  test_plotting.py  test_simplex.py
tests/data_test/: CLA_test_many_constraints_A_in.csv  CLA_test_many_constraints_C.csv  CLA_test_many_constraints_SCIPY.csv  CLA_test_many_constraints_TWO_STAGE_SIMPLEX.csv  CLA_test_many_constraints_b_in.csv  CLA_test_many_constraints_mu.csv  CLA_test_many_constraints_ub.csv  CLA_test_markowitz_et_al.csv  CLA_test_markowitz_et_al_data.csv  CLA_test_markowitz_et_al_semi.csv  CLA_test_markowitz_todd.csv  CLA_test_markowitz_todd_C.csv  CLA_test_random_10.csv  CLA_test_random_100.csv  CLA_test_random_20.csv  CLA_test_random_30.csv  CLA_test_random_40.csv  CLA_test_random_60.csv  CLA_test_random_70.csv  CLA_test_random_80.csv  CLA_test_random_90.csv
