[tool.poetry]
name = "pycla"
version = "0.1.0"
description = ""
authors = ["phschiele <phschiele@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
numpy = "^1.20.2"
scipy = "^1.6.3"

[tool.poetry.dev-dependencies]
matplotlib = "^3.4.1"
scikit-learn = "^0.24.2"
pytest = "^6.2.3"
pandas = "^1.2.4"
pre-commit = "^2.12.1"
cvxpy = "^1.1.15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
