[tool.poetry]
name = "pycla"
version = "0.0.0"
description = ""
authors = ["phschiele <phschiele@gmail.com>"]
packages = [{include = "cvx"}]


[tool.poetry.dependencies]
python = ">=3.8.0,<3.12"
numpy = "*"
scipy = "*"

[tool.poetry.dev-dependencies]
matplotlib = "*"
scikit-learn = "*"
pandas = "*"
cvxpy = "*"

[tool.poetry.group.test.dependencies]
pytest = "7.2.0"
pytest-cov = "4.0.0"

[tool.poetry.group.jupyter.dependencies]
jupyterlab = "*"
jupyter-book = "0.15.1"
pyyaml = "6.0"

[tool.peotry.group.linting.dependencies]
ruff = "0.0.277"
pre-commit = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
